update 9.6
update:完善单元测试
